--- a/common/header-en.html
+++ b/common/header-en.html
@@ -1,12 +1,7 @@
 <!-- Main Header-->
 <header class="main-header">
-
-	<!--Header-Upper-->
-	
-	<!--End Header Upper-->
-	
 	<!--Sticky Header-->
-	<div class="sticky-header pc-header">
+	<div class="sticky-header pc-header en">
 		<div class="auto-container clearfix">
 			<!--Logo-->
 			<div class="logo pull-left">
@@ -24,54 +19,54 @@
 					<div class="navbar-collapse collapse clearfix" id="navbarSupportedContent1">
 						<ul class="navigation clearfix">
 							<li class="dropdown"  data-type="index">
-									<a href="index-en.html">首页</a>
+									<a href="index-en.html">Home</a>
 								</li>
 								<li class="dropdown" data-type="product">
-									<a href="product-en.html">产品中心</a>
+									<a href="product-en.html">Product Center</a>
 									<ul class="dropdown-menu">
-										<li><a href="product-en.html?item=2">乘用车座椅</a></li>
-										<li><a href="product-en.html?item=3">商用车座椅</a></li>
-										<li><a href="product-en.html?item=4">骨架与零部件</a></li>
-										<li><a href="product-en.html?item=4">面套</a></li>
-										<li><a href="product-en.html?item=5">泡沫</a></li>
+										<li><a href="product-en.html?item=2">Passenger Car Seat</a></li>
+										<li><a href="product-en.html?item=3">Commercial Car Seat</a></li>
+										<li><a href="product-en.html?item=4">Frame and Components</a></li>
+										<li><a href="product-en.html?item=4">Trim</a></li>
+										<li><a href="product-en.html?item=5">Foam</a></li>
 									</ul>
 								</li>
 								<li class="dropdown" data-type="technology">
-									<a href="technology-en.html">技术能力</a>
+									<a href="technology-en.html">Technical Capacity</a>
 									<ul class="dropdown-menu">
-										<li><a href="technology-en.html?item=1">创新研发</a></li>
-										<li><a href="technology-en.html?item=4">技术中心</a></li>
-										<li><a href="technology-en.html?item=5">制造能力</a></li>
+										<li><a href="technology-en.html?item=1">Innovation and development</a></li>
+										<li><a href="technology-en.html?item=4">Technical center</a></li>
+										<li><a href="technology-en.html?item=5">Manufacturing capacity</a></li>
 									</ul>
 								</li>									
 								<li class="dropdown" data-type="profession">
-									<a href="profession-en.html">职业前景</a>
+									<a href="profession-en.html">Career</a>
 									<ul class="dropdown-menu">
-										<li><a href="profession-en.html?item=1">雇主品牌</a></li>
-										<li><a href="profession-en.html?item=2">工作机会</a></li>
-										<li><a href="profession-en.html?item=4">员工发展</a></li>
-										<li><a href="profession-en.html?item=8">工作体验</a></li>
+										<li><a href="profession-en.html?item=1">Employer brand</a></li>
+										<li><a href="profession-en.html?item=2">Career opportunity</a></li>
+										<li><a href="profession-en.html?item=4">Staff development</a></li>
+										<li><a href="profession-en.html?item=8">Work experience</a></li>
 									</ul>
 								</li>
 								<li class="dropdown" data-type="culture">
-									<a href="culture-en.html">企业文化</a>
+									<a href="culture-en.html">Culture</a>
 									<ul class="dropdown-menu">
-										<li><a href="culture-en.html?item=3">文化项目</a></li>
-										<li><a href="culture-en.html?item=4">文化的力量</a></li>
-										<li><a href="culture-en.html?item=5">社会责任</a></li>
-										<li><a href="culture-en.html?item=8">杂志《认知》</a></li>
+										<li><a href="culture-en.html?item=3">Cultural project</a></li>
+										<li><a href="culture-en.html?item=4">The Power of Culture</a></li>
+										<li><a href="culture-en.html?item=5">Social responsibility</a></li>
+										<li><a href="culture-en.html?item=8">Magazine Cognition</a></li>
 									</ul>
 								</li>
 								<li class="dropdown" data-type="news">
-									<a href="news-en.html">新闻中心</a>
+									<a href="news-en.html">News</a>
 								</li>
 								<li class="dropdown" data-type="about">
-									<a href="about-en.html">关于我们</a>
+									<a href="about-en.html">About us</a>
 									<ul class="dropdown-menu">
-										<li><a href="about-en.html?item=2">愿景使命</a></li>
-										<li><a href="about-en.html?item=3">发展历程</a></li>
-										<li><a href="about-en.html?item=4">全国布局</a></li>
-										<li><a href="about-en.html?item=5">合作伙伴</a></li>
+										<li><a href="about-en.html?item=2">Vision & mission</a></li>
+										<li><a href="about-en.html?item=3">History</a></li>
+										<li><a href="about-en.html?item=4">Strategy targe</a></li>
+										<li><a href="about-en.html?item=5">Partnership</a></li>
 									</ul>
 								</li>
 								<li class="language-box">
