--- a/product-en.html
+++ b/product-en.html
@@ -129,27 +129,6 @@
 			<div class="swiper-slide slide1 slide-zy">
 				<img class="slide-bg" src="images/background/bg-2-2.jpg">
 				<div class="content">
-					<!-- <img class="zy-img" src="images/index/3.png">
-					<div class="content-box">
-						<div class="point point1">
-							<div class="point-text">整椅</div>
-							<img src="images/icons/point.png">
-						</div>
-						<div class="point point2">
-							<div class="point-text">面套</div>
-							<img src="images/icons/point.png">
-						</div>
-						<div class="point point3">
-								<div class="point-text">骨架</div>
-							<img src="images/icons/point.png">
-							
-						</div>
-						<div class="point point4">
-								<div class="point-text">泡沫</div>
-							<img src="images/icons/point.png">
-							
-						</div>
-					</div> -->
 					<img class="zy-img animated" data-my-animate="fadeInUp100" src="images/index/yz.gif">
 					<div class="content-box">
 						<div class="point point1 animated ani-time2" data-my-animate="fadeInLeft">
@@ -194,9 +173,9 @@
 						<img class="slide-bg" src="images/product/2-1.jpg">
 						<div class="content my-bg-color5 animated" data-my-animate="fadeInLeft" >
 							<div class="my-column-center cont-box">
-								<div class="cont1 my-color2">乘用车座椅</div>
-								<div class="cont2 my-color1">出色的人机工程设计，将人、科技、艺术与座椅完美结合，
-									带来舒适的驾乘体验。
+								<div class="cont1 my-color2">Passenger Car Seat</div>
+								<div class="cont2 my-color1">Excellent ergonomic design with perfect integration of people, 
+									technology, art and seats provides comfortable driving experience.
 								</div>
 							</div>
 						</div>
@@ -209,14 +188,6 @@
 			</div>
 			<!--第3屏-->
 			<div class="swiper-slide slide3">
-				<!-- <img class="slide-bg" src="images/product/3-1.jpg">
-				<div class="content-box animated" data-my-animate="fadeInLeft">
-					<div class="content text-center">
-						<div class="cont1 my-color2">商用车座椅</div>
-						<div class="cont2 my-color1">安全可靠的性能，缓解不同环境和不同路况带来的疲劳，助您操控自如。
-						</div>
-					</div>
-				</div> -->
 				<div class="column-box">
 					<div class="item-box box1">
 						<img class="slide-bg" src="images/product/3-1.jpg">
@@ -226,8 +197,8 @@
 						<img class="slide-bg" src="images/product/3-2.jpg">
 						<div class="content my-bg-color5 animated" data-my-animate="fadeInRight" >
 							<div class="my-column-center cont-box">
-								<div class="cont1 my-color2">商用车座椅</div>
-								<div class="cont2 my-color1">安全可靠的性能，缓解不同环境和不同路况带来的疲劳，助您操控自如。
+								<div class="cont1 my-color2">Commercial Car Seat</div>
+								<div class="cont2 my-color1">Safe and reliable performance alleviates the fatigue caused by different environments and traffic and improves steerability.
 								</div>
 							</div>
 						</div>
@@ -244,7 +215,7 @@
 					<div class="item-box box2 animated" data-my-animate="fadeInDown100">
 						<div class="content content1 animated ani-time2" data-my-animate="fadeInDown100">
 							<div class="cont-text">
-									<div class="cont1 my-color3">骨架与零部件</div>
+									<div class="cont1 my-color3">Frame and Components</div>
 									<div class="cont2 my-color4">通过运行先进材料和先进工艺，达到产品性能提升，实现模块化和平台化
 										策略，提升产品轻量化，致力超越客户多样化的需求。
 									</div>
@@ -267,9 +238,9 @@
 					<div class="item-box box2 animated" data-my-animate="fadeInDown100">
 						<div class="content content1 my-bg-color2">
 							<div class="cont-text animated ani-time2" data-my-animate="fadeInLeft">
-								<div class="cont1 my-color3">面套</div>
-								<div class="cont2 my-color1">从面料的设计，到面料的后处理精致工艺及领先的放版、
-									裁剪、缝制技术，使座椅呈现高品质的外观，为创意设计和凸显个性化提供更大的自由度。
+								<div class="cont1 my-color3">Trim</div>
+								<div class="cont2 my-color1">Our trim cover design in early stage and post-processing craftsmanship and the leading techniques of pattern design, 
+									cutting and sewing at large presents high-quality appearance and provides more flexibility for creative and individualized design.
 								</div>
 							</div>
 						</div>
@@ -279,9 +250,8 @@
 						<img class="content content1" src="images/product/5-4.jpg">
 						<div class="content content2">
 							<div class="cont-text animated ani-time2" data-my-animate="fadeInLeft">
-								<div class="cont1 my-color3">泡沫</div>
-								<div class="cont2 my-color4">独有的配方经验，和领先的制造技术，能使产品在不同区域和不同层次表现出不同
-									的软硬度，带给驾乘者短期和长期舒适性能。
+								<div class="cont1 my-color3">Foam</div>
+								<div class="cont2 my-color4">Unique formula and leading manufacturing technology enable our products to realize different level of hardness in different parts, thus bringing comfort to the driver.
 								</div>
 							</div>
 						</div>
