--- a/technology-en.html
+++ b/technology-en.html
@@ -404,10 +404,10 @@
 				<div class="content-box">
 					<img class="content1 animated" data-my-animate="fadeInLeft" src="images/main-slider/zy1.png">
 					<div class="content text-right">
-							<h3 class="text1 animated ani-time2" data-my-animate="fadeInRight">创新研发</h3>
+							<h3 class="text1 animated ani-time2" data-my-animate="fadeInRight">Innovation and development</h3>
 							<h3 class="text2 animated ani-time3" data-my-animate="fadeInRight">
-								<span>超级座椅</span><br>
-								<span style="font-weight:bold; color:rgba(191,215,50,1)">面向未来的座椅</span>
+								<span>Super Seat</span><br>
+								<span style="font-weight:bold; color:rgba(191,215,50,1)">Future-oriented seats</span>
 							</h2>
 					</div>
 				</div>
@@ -508,7 +508,7 @@
 				<div class="content1">
 					<img src="images/background/bg-21.jpg" alt="">
 					<div class="content-box text-color4 animated" data-my-animate="fadeInDown100">
-						<div class="cont1 text-color2"><span>技术</span>中心</div>
+						<div class="cont1 text-color2"><span>Technical </span> center</div>
 						<div class="my-font4">我们拥有完整的座椅设计开发能力，以技术创新支持业务运营</div>
 						<div class="cont2 text-color4">
 							<span>></span>
@@ -629,7 +629,7 @@
 				<div class="content-box">
 					<div>
 						<div class="conts">
-							<div class="cont1 text-color2 animated" data-my-animate="fadeInLeft"><span>制造</span>能力</div>
+							<div class="cont1 text-color2 animated" data-my-animate="fadeInLeft"><span>Manufacturing</span> capacity</div>
 							<div class="cont2 text-color4 animated ani-time2" data-my-animate="fadeInLeft">我们拥有</div>
 							<div class="cont3 text-color2 animated ani-time2" data-my-animate="fadeInLeft">从汽车座椅零部件到整椅的各部分的生产制造能力</div>
 						</div>
