--- a/index-en.html
+++ b/index-en.html
@@ -174,6 +174,8 @@
 }
 .slide6 .item1>div{
 	line-height: 35px;
+	width: 100%;
+	text-align: center;
 }
 .slide7 .content{
 	position: absolute;
@@ -214,7 +216,7 @@
 				</div>
 				<div class="content-box animated" data-my-animate="fadeInLeft" style="z-index:1">
 						<div class="content text-center">
-							<h2 class="my-color2"><div>提升<strong>机动化世界</strong>的</span></div><font>体验</font></h2>
+							<h2 class="my-color2"><div>Enhancing the Experience of</div><strong>the Motorized World</strong></h2>
 						</div>
 					</div>
 			</div>
@@ -271,8 +273,8 @@
 				<img class="slide-bg" src="images/background/bg-3-2.jpg">
 				<div class="content-box">
 					<div class="content text-center my-color5">
-						<h2 style="text-align: left"><div class="animated" data-my-animate="fadeInLeft">超级座椅</div>
-							<div class="animated ani-time2" data-my-animate="fadeInLeft" style="font-weight:600">面向未来的座椅</div>
+						<h2 style="text-align: left"><div class="animated" data-my-animate="fadeInLeft">Super Seat</div>
+							<div class="animated ani-time2" data-my-animate="fadeInLeft" style="font-weight:600">Future-oriented seats</div>
 						</h2>
 					</div>
 				</div>
@@ -287,12 +289,12 @@
 							<div class="area-box">
 								<span class="dot"><img src="images/icons/marker1.png"></span>
 							</div>
-							<div class="show-regin"><span>成都</span></div>
+							<div class="show-regin"><span>Chengdu</span></div>
 						</div>
 						<div class="region-list color1 active postition-2 online-node" data-num="1">
 							<div class="area-box"><span class="dot"><img src="images/icons/marker2.png"></span>
 							</div>
-							<div class="show-regin"><span>重庆</span></div>
+							<div class="show-regin"><span>Chongqing</span></div>
 						</div>
 						<div class="region-list color1 postition-2-1 online-node" data-num="6" data-type="重庆江津">
 							<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span>
@@ -307,51 +309,52 @@
 						<div class="region-list active postition-3 online-node" data-num="5">
 							<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span>
 							</div>
-							<div class="show-regin"><span>南昌</span></div>
+							<div class="show-regin"><span>Nanchang</span></div>
 						</div>
 						<div class="region-list waite postition-4 waite-node" data-num="3">
 							<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span>
 								</div>
-							<div class="show-regin"><span>东莞</span></div>
+							<div class="show-regin"><span>Dongguan</span></div>
 						</div>
 						<div class="region-list waite postition-5 waite-node" data-num="11">
 							<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span>
 								</div>
-							<div class="show-regin"><span>台州</span></div>
+							<div class="show-regin"><span>Taizhou</span></div>
 						</div>
 							<div class="region-list active postition-6 online-node" data-num="4">
 							<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span></div>
-							<div class="show-regin"><span>杭州</span></div>
+							<div class="show-regin"><span>Hangzhou</span></div>
 						</div>
 						<div class="region-list active postition-7 online-node" data-num="8">
 							<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span></div>
-							<div class="show-regin"><span>哈尔滨</span></div>
+							<div class="show-regin"><span>Haerbin</span></div>
 						</div>
 						<div class="region-list  active  postition-8 online-node" data-num="2">
 							<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span></div>
-							<div class="show-regin"><span>大庆</span></div>
+							<div class="show-regin"><span>Daqing</span></div>
 						</div>
 						<div class="region-list  active  postition-9 online-node" data-num="10" data-type="湘潭">
 							<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span></div>
-							<div class="show-regin"><span>湘潭</span></div>
+							<div class="show-regin"><span>Xiangtan</span></div>
 						</div>
 					</div>
 				</div>
-				<div class="content content1 my-color2 font3">业务概况</div>
+				<div class="content content1 my-color2 font3">Business Overview</div>
 				<div class="content content2 inner count-box animated" data-my-animate="fadeInLeft"  data-wow-delay="0ms" data-wow-duration="1500ms">
 					<span class="count-text mytimer my-color2 font2" data-speed="6000" data-stop="11" >0</span>
-					<sapn class="space">家</sapn>
-					<span>全国工厂</span>
+					<!-- <sapn class="space">家</sapn> -->
+					<span>manufacturing plants</span>
 				</div>
 				<div class="content content3 inner count-box animated" data-my-animate="fadeInLeft" data-wow-delay="600ms" data-wow-duration="1500ms">
 					<span class="count-text mytimer my-color2 font2" data-speed="6000" data-stop="4300" >0</span>
-					<span class="my-color2 font2">+</span><span class="space">名</span>
-					<span class="counter-title">员工人数</span>
+					<span class="my-color2 font2">+</span>
+					<!-- <span class="space">名</span> -->
+					<span class="counter-title">employee</span>
 				</div>
 				<div class="content content4 inner count-box animated" data-my-animate="fadeInLeft" data-wow-delay="900ms" data-wow-duration="1500ms">
 					<span class="count-text mytimer my-color2 font2" data-speed="8000" data-stop="50" >0</span>
-					<span class="space">亿元</span>
-					<span class="counter-title" >2018年销售额</span>
+					<span class="space">billion</span>
+					<span class="counter-title" >Sales in 2018</span>
 				</div>
 			</div>
 			<!--第6屏-->
@@ -359,29 +362,29 @@
 				<div class="content">
 					<div class="item-box item1 my-bg-color7 animated" data-my-animate="fadeInLeft">
 						<div class="my-all-center">
-							<div>幸福</div>
-							<div class="my-color2">是奋斗出来的</div>
+							<div>Happiness</div>
+							<div class="my-color2">comes from struggle</div>
 						</div>
 					</div>
 					<div class="item-box animated" data-my-animate="fadeInLeft">
 						<img src="images/index/6-1.jpg">
-						<div class="cont-box my-bg-color5 animated">为爱奔跑</div>
+						<div class="cont-box my-bg-color5 animated">Run for love</div>
 					</div>
 					<div class="item-box animated" data-my-animate="fadeInLeft">
 						<img src="images/index/6-2.jpg">
-						<div class="cont-box my-bg-color5 animated">春晚</div>
+						<div class="cont-box my-bg-color5 animated">Spring Festival Gala Evening</div>
 					</div>
 					<div class="item-box animated" data-my-animate="fadeInRight">
 						<img src="images/index/6-3.jpg">
-						<div class="cont-box my-bg-color5 animated">家属日</div>
+						<div class="cont-box my-bg-color5 animated">Family day</div>
 					</div>
 					<div class="item-box animated" data-my-animate="fadeInRight">
 						<img src="images/index/6-4.jpg">
-						<div class="cont-box my-bg-color5 animated">关爱助学</div>
+						<div class="cont-box my-bg-color5 animated">Caring for students</div>
 					</div>
 					<div class="item-box animated" data-my-animate="fadeInRight">
 						<img src="images/index/6-5.jpg">
-						<div class="cont-box my-bg-color5 animated">15周年庆</div>
+						<div class="cont-box my-bg-color5 animated">15th anniversary</div>
 					</div>
 				</div>
 			</div>
@@ -389,8 +392,8 @@
 			<div class="swiper-slide slide7">
 				<img class="slide-bg" src="images/index/7.jpg">
 				<div class="content">
-					<h2 style="text-align:left"><div class="animated" data-my-animate="fadeInLeft">雇主品牌</div>
-						<div class="animated ani-time2 my-color2" data-my-animate="fadeInLeft" style="font-weight:600">以卓越致敬初心</div>
+					<h2 style="text-align:left"><div class="animated" data-my-animate="fadeInLeft">Employer brand</div>
+						<div class="animated ani-time2 my-color2" data-my-animate="fadeInLeft" style="font-weight:600">Strive for excellence,stay true to the mission</div>
 					</h2>
 				</div>
 			</div>
