--- a/profession-en.html
+++ b/profession-en.html
@@ -75,7 +75,7 @@
 }
 .section2 .content{
 	left: 15%;
-	width: 30%;
+	width: 50%;
 }
 .section2 .cont1>span{
 	display: inline-block;
@@ -99,10 +99,10 @@
 .section3>.content-box{
 	display: flex;
 	justify-content: space-between;
-	padding: 0 15%;
+	padding: 0 10%;
 }
 .section3 .content{
-	width: 35%;
+	width: 42%;
     padding: 40px 0;
     position: relative;
 	text-align: center;
@@ -122,7 +122,7 @@
 }
 .section3 .cont2{
 	font-size: 22px;
-    letter-spacing: 10px;
+    /* letter-spacing: 10px; */
     margin: 50px 0 30px;
 }
 .section3 .bg1{
@@ -270,8 +270,13 @@
 .section6 .content1 .cont4{
 	position: relative;
     display: flex;
-    width: 100%;
+    width: 120%;
     justify-content: space-around;
+}
+.section6 .content1 .cont4 .item-box{
+	display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .section6 .content1 .cont4 .item-box .img-b{
 	display: none;
@@ -382,8 +387,8 @@
 #college-box .item-box>.content-box{
 	display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    text-align: center;
 }
 #college-box .item-box>.content-box>.content-box{
 	background-color: rgba(174,195,64,0.5);
@@ -443,11 +448,11 @@
 	<section class="welcome-section section1 my-color1" data-item="1" style="padding:0">
 		<img src="images/profession/1-1.jpg">
 		<div class="content wow fadeInRight">
-			<div class="cont1 my-color2 font7">雇主品牌</div>
-			<div class="cont2 my-color2 font2">志存高远<span>|</span>永不止步<span>|</span>凝心聚力</div>
+			<div class="cont1 my-color2 font7">Employer brand</div>
+			<div class="cont2 my-color2 font2">Ambitiousness<span>|</span>Never Stop<span>|</span>Work Together</div>
 			<div class="cont3">
-				<span>笃行：</span>因为有初心，所以我们愿意砥砺进取，精益求精，不断进取。<br>
-				<span>初心：</span>每一个加入这里的人，都是有信念，有态度，有追求的人，我们志同道合。
+				<span>Practice:</span> For initiative，we strive to make breakthroughs and keep progress.<br>
+				<span>Initiative:</span> We are like-minded group ,for everyone joining here with the sane faith ,attitude and pursuit .
 			</div>
 		</div>
 	</section>
@@ -455,11 +460,11 @@
 		<img src="images/profession/2-1.jpg">
 		<div class="content my-column-center">
 			<div class="wow fadeInLeft">
-				<div class="cont1 font7 my-color2"><span>面向校园</span>及社会招聘</div>
-				<div class="cont2 font2 my-color2">这是一个追求卓越的组织；</div>
-				<div class="cont3">每一个加入这里的人，都是有信念，有态度，有追求的人，我们志同道合，不忘初心；<br>
-				每个人在这里变得更好，至臻尽善。</div>
-				<div class="cont4 font2">我们，以卓越致敬初心</div>
+				<div class="cont1 font7 my-color2"><span>Campus recruitment</span> and social recruitment</div>
+				<div class="cont2 font2 my-color2">This is an organization pursuing excellence;</div>
+				<div class="cont3">Every partner of us is alike with attitude, faith, pursuit and stay true to our original aspiration.<br>
+					Here, we everyone become a better self and does utmost.</div>
+				<div class="cont4 font2">We, strive for excellence, stay true to our original aspiration</div>
 			</div>
 		</div>
 	</section>
@@ -472,30 +477,25 @@
 				<div class="my-column-center">
 					<div class="cont1">
 						<a href="http://www.hotjob.cn/wt/CQYFAS/web/index/campus" target="_blank">
-							<span class="my-bg-color2">校园招聘</span>
+							<span class="my-bg-color2">Campus recruitment</span>
 						</a>
 					</div>
-					<div class="cont2">座拥青春 椅靠未来</div>
-					<div class="cont3">我们每年持续开展校园招聘，</div>
-					<div class="cont3">校园人才成为五分之一的组织血液；</div>
-					<div class="cont4">我们为您提供高速成长的土壤，</div>
-					<div class="cont4">为您的初心创造平台，</div>
-					<div class="cont4">成就您的职业梦想。</div>
+					<div class="cont2">Seating of the mission  Lean on future</div>
+					<div class="cont3">We continuously launch campus recruitment, </div>
+					<div class="cont3">and newly-recruited graduates accounts for one-fifth of our organization;</div>
+					<div class="cont4">We provide fertile soil and great platform to achieve your career goal.</div>
 				</div>
 			</div>
 			<div class="content content2  wow fadeInRight ani-time2">
 				<div class="my-column-center">
 					<div class="cont1">
 						<a href="http://www.hotjob.cn/wt/CQYFAS/web/index/social" target="_blank">
-							<span class="my-bg-color2">社会招聘</span>
+							<span class="my-bg-color2">Social recruitment</span>
 						</a>
 					</div>
-					<div class="cont2">因为有你 卓越未来</div>
-					<div class="cont3">我们一直秉承任人唯贤的价值观，寻求敢于</div>
-					<div class="cont3">创新、追求卓越、不断突破的优质人才；</div>
-					<div class="cont4">我们倡导同创共享的奋斗者文化，</div>
-					<div class="cont4">我们是爱学习、爱奋斗、爱创新、</div>
-					<div class="cont4">爱生活的艾小渝；</div>
+					<div class="cont2">With you, We’ll create an excellent future</div>
+					<div class="cont3">We have been sticking to meritocracy and seeking high quality talents with innovative thinking, excellence-oriented and breakthrough;</div>
+					<div class="cont4">We advocate to create and share together-striver culture, we are “Ai Xiaoyu” who is fond of study, struggle, innovation and life;</div>
 				</div>
 			</div>
 		</div>
@@ -503,26 +503,27 @@
 	<section class="welcome-section section4" data-item="4" style="padding:0">
 		<img src="images/profession/4-1.jpg">
 		<div class="content">
-			<div class="cont1 my-bg-color7 my-color2 font7 wow fadeInRight">员工发展</div>
-			<div class="cont2 my-color5 font2 wow fadeInRight ani-time2">打造一个没有天花板的舞台</div>
-			<div class="cont3 wow fadeInRight ani-time3">我们期望为人才的成长与发展提供良好的土壤和广阔的平台，在注重企业自身
-				不断发展的同时，我们重视每一位员工以及用于培养他们的资源投入。我们倡导：
+			<div class="cont1 my-bg-color7 my-color2 font7 wow fadeInRight">Staff Development</div>
+			<div class="cont2 my-color5 font2 wow fadeInRight ani-time2">A platform with no ceiling</div>
+			<div class="cont3 wow fadeInRight ani-time3">We aim to provide a good environment and wide platform for staff growth and development.
+				  We attach great importance to develop our business as well as our employees. We propose:
 			</div>
-			<div class="cont4 wow fadeInRight ani-time3">员工是自己职业发展的主导者，直接主管是员工的教练，人力资源工作者是支持者和内部顾问。</div>
-			<div class="cont5 wow fadeInRight ani-time3">让每一个独特的灵魂在没有天花板的成长空间尽情闪耀！</div>
+			<div class="cont4 wow fadeInRight ani-time3">Every employee is his/her leader of their career development; direct supervisor is the coach, and HR staffs are supporters and internal consultants.</div>
+			<div class="cont5 wow fadeInRight ani-time3">Let each unique soul shine on the platform with no ceiling!</div>
 		</div>
 	</section>
 	<section class="main-slider welcome-section section5 my-font2" data-item="5" style="padding:0;margin-top:30px">
 		<div class="content">
 			<div class="content1 wow fadeInDown100">
 				<div class="my-all-center">
-					<div class="cont1 font5 my-color5">学习与发展原则</div>
-					<div class="cont2">员工发展的表现来源于个人在职业生涯中的改变、适应以及成长能力。
-						重庆延锋安道拓注重实时地在现实生活中学习的价值，从而使个人能满足充满挑战和变化的工作要求。
+					<div class="cont1 font5 my-color5">Principles of learning and development</div>
+					<div class="cont2">The performance of employee’s development comes from the individual's ability to change, adapt and grow in his career.
+						 We emphasize the value of learning in working environment,
+						 so that individuals can meet the requirements full of challenges and changes in work.
 					</div>
-					<div class="cont3 my-color5">公司对于员工个人学习和发展遵从</div>
+					<div class="cont3 my-color5">employees' personal development</div>
 					<div class="cont4 font4 my-color5">
-						<span>三个基本原则</span>
+						<span>Three basic principles</span>
 						<img class="icon icon2" src="images/icons/icon-triangle.png">
 					</div>
 				</div>
@@ -531,15 +532,15 @@
 				<div class="main-slider-carousel owl-carousel owl-theme">
 					<div class="slide">
 						<img src="images/profession/5-1.jpg">
-						<div class="cont1 my-color5">干中学</div>
+						<div class="cont1 my-color5">learn by doing</div>
 					</div>
 					<div class="slide">
 						<img src="images/profession/5-2.jpg">
-						<div class="cont1 my-color5">承担责任</div>
+						<div class="cont1 my-color5">take responsibility</div>
 					</div>
 					<div class="slide">
 						<img src="images/profession/5-3.jpg">
-						<div class="cont1 my-color5">寻求支持</div>
+						<div class="cont1 my-color5">seek support</div>
 					</div>
 				</div>
 			</div>
@@ -550,9 +551,9 @@
 		<img src="images/profession/6-1.jpg">
 		<div class="content content1 my-color1 wow fadeInLeft">
 			<div class="cont-box">
-				<div class="cont1 font5 my-color2">多样化学习资源</div>
-				<div class="cont2">在三个基本原则的指导下，公司对员工的学习发展体系建设中也遵循10-20-70的发展原则，
-					让培养与发展的资源更有助于转化为员工的能力。</div>
+				<div class="cont1 font5 my-color2">Diversified learning resources</div>
+				<div class="cont2">Besides the three basic principles, we apply 10-20-70 development principles in building the employee’s learning and development system,
+					 so that these learning resources are more conducive to improve employees’ ability.</div>
 				<div class="line">
 					<span></span>
 				</div>
@@ -560,23 +561,23 @@
 					<img src="images/profession/icon6-1.png">
 					<div class="cont-text cont-text1">课程培训/Workshop/E-learning/在职学历教育</div>
 					<div class="cont-text cont-text2">一对一辅导/360度评估反馈/导师机制</div>
-					<div class="cont-text cont-text3">岗位锻炼 授权/转换职能/负责新业务等</div>
+					<div class="cont-text cont-text3">岗位锻炼/授权/转换职能/负责新业务等</div>
 				</div>
 				<div class="cont4">
 					<div class="item-box item1">
 						<img class="img-a" src="images/profession/icon6-2a.png">
 						<img class="img-b" src="images/profession/icon6-2b.png">
-						<div class="cont-text">200+ 面授课程</div>
+						<div class="">200+ Face-to-face lecture</div>
 					</div>
 					<div class="item-box item2">
 						<img class="img-a" src="images/profession/icon6-3a.png">
 						<img class="img-b" src="images/profession/icon6-3b.png">
-						<div class="cont-text">100+ 在线课程</div>
+						<div class="">100+ Face-to-face lecture</div>
 					</div>
 					<div class="item-box item3">
 						<img class="img-a" src="images/profession/icon6-4a.png">
 						<img class="img-b" src="images/profession/icon6-4b.png">
-						<div class="cont-text">200+ 认证讲师</div>
+						<div class="">200+Certified trainer</div>
 					</div>
 				</div>
 			</div>
@@ -584,11 +585,10 @@
 		<div class="content content2">
 			<div class="cont cont1 wow fadeInUp ani-time3"><img src="images/profession/icon6-5.png"></div>
 			<div class="cont cont2 wow fadeInRight ani-time3">
-				<div class="cont-text1 font5 my-color5">员工发展通路</div>
-				<div class="cont-text2">在重庆延锋安道拓，员工的职业发展主要通过三条通路实现：
-					管理通路、专业通路和轮岗通路。</div>
-				<div class="cont-text3">公司倡导员工澄清自己的职业发展目标，选择合适自己的职业发展方向。
-					同时公司为员工设置了不同发展方向的通路。</div>
+				<div class="cont-text1 font5 my-color5">Development Route for Employee</div>
+				<div class="cont-text2">Here employees could achieve their career goal mainly through three routes:
+					 management, profession and job rotation.</div>
+				<div class="cont-text3">We encourage employees to clarify their career goal and choose the fitted career path.</div>
 			</div>
 		</div>
 		<img class="icon icon1" src="images/icons/icon-connect.png">
@@ -598,9 +598,9 @@
 		<div class="content1">
 			<img class="icon icon1" src="images/icons/icon-connect.png">
 			<div class="cont1 wow fadeInDown100">
-				<div class="cont-text1 font5 my-color5">CQYFAS领导力学院</div>
-				<div class="cont-text2">CQYFAS领导力学院培养训练有素的管理者及后备梯队人才。
-					在这里我们传承和打造CQYFAS的管理文化，旨在为每一位管理者或有潜力成为管理者的员工提供领导力成长的有序路径。
+				<div class="cont-text1 font5 my-color5">CQYFAS Leadership Academy</div>
+				<div class="cont-text2">CQYFAS Leadership Mechanics Institute trains well-trained leaders and reserve talents. Here we inherit and create the management culture of CQYFAS,
+					 aiming at providing an orderly path for every manager or employee who has potential to become a manager.
 				</div>
 				<div class="cont-text3">
 					<img src="images/profession/7-2.jpg">
@@ -612,17 +612,16 @@
 		</div>
 		<div class="content2 my-color1">
 			<div class="cont-box wow fadeInRight ani-time2">
-				<div class="cont1 font5 my-color2">CQYFAS专业学院</div>
-				<div class="cont2">重庆延锋安道拓专业学院于2015年成立，旨在系统化的提升员工的专业能力，
-					在建立技术人才梯队的同时，激励和发挥高级专业人才的带头引领作用。
+				<div class="cont1 font5 my-color2">CQYFAS Professional Academy</div>
+				<div class="cont2">Professional Academy is established in 2015, Our aim is to improve the professional competence in fields and raise a talent team motivated and led by senior experts. 
 				</div>
-				<div class="cont3">目前设13大专业学院：</div>
+				<div class="cont3">As a result, we have 13 professional academies as following:</div>
 				<div id="college-box" class="cont4 my-color5">
 					<div class="item-box">
 						<img class="bg1" src="images/profession/bg1.png">
 						<div class="content-box">
 							<div class="img-a"><img src="images/profession/icon7-1.png"></div>
-							<div class="cont-text">采购学院</div>
+							<div class="cont-text">Purchasing Academy</div>
 							<div class="content-box"></div>
 						</div>
 					</div>
@@ -630,7 +629,7 @@
 						<img class="bg1" src="images/profession/bg1.png">
 						<div class="content-box">
 								<div class="img-a"><img src="images/profession/icon7-2.png"></div>
-							<div class="cont-text">质量学院</div>
+							<div class="cont-text">Quality Academy</div>
 							<div class="content-box"></div>
 						</div>
 					</div>
@@ -638,7 +637,7 @@
 						<img class="bg1" src="images/profession/bg1.png">
 						<div class="content-box">
 								<div class="img-a"><img src="images/profession/icon7-3.png"></div>
-							<div class="cont-text">财务学院</div>
+							<div class="cont-text">Finance Academy</div>
 							<div class="content-box"></div>
 						</div>
 					</div>
@@ -646,7 +645,7 @@
 						<img class="bg1" src="images/profession/bg1.png">
 						<div class="content-box">
 								<div class="img-a"><img src="images/profession/icon7-4.png"></div>
-							<div class="cont-text">商务学院</div>
+							<div class="cont-text">Commerce Academy</div>
 							<div class="content-box"></div>
 						</div>
 					</div>
@@ -654,7 +653,7 @@
 						<img class="bg1" src="images/profession/bg1.png">
 						<div class="content-box">
 							<div class="img-a"><img src="images/profession/icon7-5.png"></div>
-							<div class="cont-text">物料学院</div>
+							<div class="cont-text">Materials Academy</div>
 							<div class="content-box"></div>
 						</div>
 					</div>
@@ -662,7 +661,7 @@
 						<img class="bg1" src="images/profession/bg1.png">
 						<div class="content-box">
 							<div class="img-a"><img src="images/profession/icon7-6.png"></div>
-							<div class="cont-text">制造运营学院</div>
+							<div class="cont-text">MMC Academy</div>
 							<div class="content-box"></div>
 						</div>
 					</div>
@@ -678,7 +677,7 @@
 						<img class="bg1" src="images/profession/bg1.png">
 						<div class="content-box">
 								<div class="img-a"><img src="images/profession/icon7-8.png"></div>
-							<div class="cont-text">HSE学院</div>
+							<div class="cont-text">HSE Academy</div>
 							<div class="content-box"></div>
 						</div>
 					</div>
@@ -686,7 +685,7 @@
 						<img class="bg1" src="images/profession/bg1.png">
 						<div class="content-box">
 								<div class="img-a"><img src="images/profession/icon7-9.png"></div>
-							<div class="cont-text">CI学院</div>
+							<div class="cont-text">CI Academy</div>
 							<div class="content-box"></div>
 						</div>
 					</div>
@@ -694,7 +693,7 @@
 						<img class="bg1" src="images/profession/bg1.png">
 						<div class="content-box">
 								<div class="img-a"><img src="images/profession/icon7-10.png"></div>
-							<div class="cont-text">HR学院</div>
+							<div class="cont-text">HR Academy</div>
 							<div class="content-box"></div>
 						</div>
 					</div>
@@ -702,7 +701,7 @@
 						<img class="bg1" src="images/profession/bg1.png">
 						<div class="content-box">
 								<div class="img-a"><img src="images/profession/icon7-11.png"></div>
-							<div class="cont-text">工艺学院</div>
+							<div class="cont-text">Craftsmanship Academy</div>
 							<div class="content-box"></div>
 						</div>
 					</div>
@@ -710,7 +709,7 @@
 						<img class="bg1" src="images/profession/bg1.png">
 						<div class="content-box">
 								<div class="img-a"><img src="images/profession/icon7-12.png"></div>
-							<div class="cont-text">设备学院</div>
+							<div class="cont-text">Equipment Academy</div>
 							<div class="content-box"></div>
 						</div>
 					</div>
@@ -718,7 +717,7 @@
 						<img class="bg1" src="images/profession/bg1.png">
 						<div class="content-box">
 								<div class="img-a"><img src="images/profession/icon7-13.png"></div>
-							<div class="cont-text">项目学院</div>
+							<div class="cont-text">PMO Academy</div>
 							<div class="content-box"></div>
 						</div>
 					</div>
@@ -727,36 +726,36 @@
 		</div>
 	</section>
 	<section class="main-slider welcome-section section8 my-color1" data-item="8" style="padding:0">
-		<div class="title my-bg-color7 my-color2 font7">工作体验</div>
+		<div class="title my-bg-color7 my-color2 font7">Work experience</div>
 		<div class="my-slider-carousel owl-carousel owl-theme">
 			<div class="slide">
 				<div class="content wow fadeInUp100">
 					<img src="images/profession/8-1.jpg">
-					<div class="cont-box my-bg-color5 animated">办公一角</div>
+					<div class="cont-box my-bg-color5 animated">Office corner</div>
 				</div>
 			</div>
 			<div class="slide">
 				<div class="content wow fadeInUp100">
 					<img src="images/profession/8-2.jpg">
-					<div class="cont-box my-bg-color5 animated">休闲区</div>
+					<div class="cont-box my-bg-color5 animated">Leisure Area</div>
 				</div>
 			</div>
 			<div class="slide">
 				<div class="content wow fadeInUp100">
 					<img src="images/profession/8-3.jpg">
-					<div class="cont-box my-bg-color5 animated">健身房</div>
+					<div class="cont-box my-bg-color5 animated">Gym</div>
 				</div>
 			</div>
 			<div class="slide">
 				<div class="content wow fadeInUp100">
 					<img src="images/profession/8-4.jpg">
-					<div class="cont-box my-bg-color5 animated">咖啡吧</div>
+					<div class="cont-box my-bg-color5 animated">Coffee bar</div>
 				</div>
 			</div>
 			<div class="slide">
 				<div class="content wow fadeInUp100">
 					<img src="images/profession/8-5.jpg">
-					<div class="cont-box my-bg-color5 animated">餐厅</div>
+					<div class="cont-box my-bg-color5 animated">Restaurant</div>
 				</div>
 			</div>
 		</div>
