移动端修改

--- a/m/common/footer.html
+++ b/m/common/footer.html
@@ -31,6 +31,7 @@
 		<span>重庆延锋安道拓微天下</span>
 	</div>
 	<div class="logo-box">
+		<div class="logo-lable">友情链接：</div>
 		<a href="https://www.adient.com"><img src="images/logo1.png" alt="" /></a>	
 		<a href="https://www.yanfengadient.com/"><img src="images/logo2.png" alt="" /></a>	
 	</div>	
