--- a/m/culture.html
+++ b/m/culture.html
@@ -50,7 +50,7 @@
 }
 .section2 .content3{
 	position: absolute;
-    bottom: 5%;
+    bottom: 2%;
     text-align: center;
     width: 100%;
 }
@@ -207,7 +207,7 @@
 <!--End Main Header -->
 
 <div class="page-wrapper" id="culture">
- 	
+	<div class="go-top"><img src="images/icons/go-top.png"></div>
     <!-- Preloader -->
     <div class="preloader"></div>
 	
@@ -221,9 +221,9 @@
 	<section class="section2">
 		<img src="images/culture/2-1.jpg" />
 		<div class="content content-box my-color1">
-			<div class="content1 wow fadeInDown"><strong class="my-font4">幸福家文化</strong><span class="split">/</span><span>土壤</span></div>
+			<div class="content1 wow fadeInDown"><strong class="my-font4">幸福家文化</strong><div>土壤</div></div>
 			<div class="content2 my-all-center"><img class="" src="images/culture/icon1.png" /></div>
-			<div class="content3 wow fadeInUp"><span>同创共享的</span><strong class="my-font4">奋斗者文化</strong><span class="split">/</span><span>根基</span></div>
+			<div class="content3 wow fadeInUp"><span>同创共享的</span><strong class="my-font4">奋斗者文化</strong><div>根基</div></div>
 		</div>
 	</section>
 	<section class="section3 my-color1">
