--- a/m/news-detail.html
+++ b/m/news-detail.html
@@ -75,7 +75,7 @@
 <div id="headerBox" data-type="news-detail"></div>
 <!--End Main Header -->
 <div class="page-wrapper" id="news-detail">
-	
+    <div class="go-top"><img src="images/icons/go-top.png"></div>
  	
     <!-- Preloader -->
     <div class="preloader"></div>
@@ -126,8 +126,10 @@
 <script src="js/masterslider/jquery.easing.min.js"></script>
 <script src="js/masterslider/masterslider.min.js"></script>
 <!--End Master Slider -->
+<script src="js/swiper.js"></script>
 
 <script src="js/script.js"></script>
+<script src="my-js/news.js"></script>
 <script type="text/javascript">
     $('.back-btn').click(function(){
         window.location.href = 'news.html'
