--- a/m/news.html
+++ b/m/news.html
@@ -112,6 +112,7 @@
 <div id="headerBox" data-type="news"></div>
 <!--End Main Header -->
 <div class="page-wrapper" id="news">
+    <div class="go-top"><img src="images/icons/go-top.png"></div>
     <!-- Preloader -->
     <div class="preloader"></div>
     <!--Main Slider-->
