--- a/m/product.html
+++ b/m/product.html
@@ -73,7 +73,7 @@
 <!--End Main Header -->
 
 <div class="page-wrapper" id="product">
- 	
+	<div class="go-top"><img src="images/icons/go-top.png"></div> 	
     <!-- Preloader -->
     <div class="preloader"></div>
 	
