--- a/m/profession.html
+++ b/m/profession.html
@@ -236,6 +236,16 @@
 .section11 .content{
 	margin: 10px 0;
 }
+.section11 .content .text{
+	padding: 5px;
+	position: absolute;
+	left: 8px;
+	right: 0;
+	bottom: 0;
+	color: #fff;
+	font-size: 1rem;
+	text-align: center;
+}
 #swiper2 .swiper-slide{
 	padding-left: 8px;
 }
@@ -249,7 +259,7 @@
 <!--End Main Header -->
 
 <div class="page-wrapper" id="profession">
- 	
+	<div class="go-top"><img src="images/icons/go-top.png"></div>	
     <!-- Preloader -->
     <div class="preloader"></div>
 	
@@ -548,18 +558,23 @@
 			<div class="swiper-wrapper my-color5">
 				<div class="swiper-slide">
 					<img src="images/profession/11-1.jpg" />
+					<div class="text my-bg-color5">办公一角</div>
 				</div>
 				<div class="swiper-slide">
 					<img src="images/profession/11-2.jpg" />
+					<div class="text my-bg-color5">休闲区</div>
 				</div>
 				<div class="swiper-slide">
 					<img src="images/profession/11-3.jpg" />
+					<div class="text my-bg-color5">健身房</div>
 				</div>
 				<div class="swiper-slide">
 					<img src="images/profession/11-4.jpg" />
+					<div class="text my-bg-color5">咖啡吧</div>
 				</div>
 				<div class="swiper-slide">
 					<img src="images/profession/11-5.jpg" />
+					<div class="text my-bg-color5">餐厅</div>
 				</div>
 			</div>
 		</div>
