--- a/m/index.html
+++ b/m/index.html
@@ -86,7 +86,7 @@
 <!--End Main Header -->
 
 <div class="page-wrapper" id="index">
- 	
+	<div class="go-top"><img src="images/icons/go-top.png"></div>
     <!-- Preloader -->
     <div class="preloader"></div>
 	
