--- a/m/technology.html
+++ b/m/technology.html
@@ -78,9 +78,12 @@
 	width: 100%;
     height: 33.33%;
     display: flex;
-    align-items: flex-end;
-    margin-left: 30px;
+    align-items: center;
+    /* margin-left: 30px; */
 	margin-bottom: 15px;
+}
+.section2 .content3 .cont-box .cont>span{
+	background-color: rgba(190, 213, 51, 0.8);
 }
 .section3 .content1{
 	text-align: center;
@@ -208,7 +211,7 @@
 <!--End Main Header -->
 
 <div class="page-wrapper" id="technology">
- 	
+	<div class="go-top"><img src="images/icons/go-top.png"></div>
     <!-- Preloader -->
     <div class="preloader"></div>
 	
