--- a/technology.html
+++ b/technology.html
@@ -477,7 +477,7 @@
 							<div class="cont2">搭载按摩、腰托、腿托、通风，根据身体情况自由调节，打造极致舒适。</div>
 						</div>
 						<div class="content content2">
-								<img src="images/technology/touqi.gif">
+								<img src="images/technology/3-3.jpg">
 							</div>
 						<div class="content content3"></div>
 					</div>
