--- a/culture-en.html
+++ b/culture-en.html
@@ -39,6 +39,9 @@
 .page-wrapper{
     height: auto;
 }
+.section1 .content{
+	left: 15% !important;
+}
 .section1 .text-box{
 	text-align: right;
 	margin-left: 100px;
