--- a/culture.html
+++ b/culture.html
@@ -39,9 +39,11 @@
 .page-wrapper{
     height: auto;
 }
+.section1 .content{
+	left: 15% !important;
+}
 .section1 .text-box{
-	text-align: right;
-	margin-left: 100px;
+	text-align: left;
 }
 .section2{
 	margin-top: 20px;
