--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 					<img class="zy-img animated" data-my-animate="fadeInUp100" src="images/index/yz.gif">
 					<div class="content-box">
 						<div class="point point1 animated ani-time2" data-my-animate="fadeInLeft">
-							<div class="point-text">整椅</div>
+							<a href="product.html"><div class="point-text">整椅</div></a>
 							<img src="images/icons/point.png">
 							<div class="line">
 								<span class="small-point"></span>
@@ -240,7 +240,7 @@
 							</div>
 						</div>
 						<div class="point point2 animated ani-time3" data-my-animate="fadeInLeft">
-							<div class="point-text">面套</div>
+							<a href="product.html"><div class="point-text">面套</div></a>
 							<img src="images/icons/point.png">
 							<div class="line">
 									<span class="small-point"></span>
@@ -253,7 +253,7 @@
 								<span class="small-point"></span>
 							</div>
 							<img src="images/icons/point.png">
-							<div class="point-text">骨架</div>
+							<a href="product.html"><div class="point-text">骨架</div></a>
 						</div>
 						<div class="point point4 animated ani-time2" data-my-animate="fadeInRight">
 							<div class="line">
@@ -261,7 +261,7 @@
 								<span class="small-point"></span>
 							</div>
 							<img src="images/icons/point.png">
-							<div class="point-text">泡沫</div>
+							<a href="product.html"><div class="point-text">泡沫</div></a>
 						</div>
 					</div>
 				</div>
@@ -367,14 +367,6 @@
 						<img src="images/index/6-1.jpg">
 						<div class="cont-box my-bg-color5 animated">为爱奔跑</div>
 					</div>
-					<div class="item-box animated" data-my-animate="fadeInLeft">
-						<img src="images/index/6-2.jpg">
-						<div class="cont-box my-bg-color5 animated">春晚</div>
-					</div>
-					<div class="item-box animated" data-my-animate="fadeInRight">
-						<img src="images/index/6-3.jpg">
-						<div class="cont-box my-bg-color5 animated">家属日</div>
-					</div>
 					<div class="item-box animated" data-my-animate="fadeInRight">
 						<img src="images/index/6-4.jpg">
 						<div class="cont-box my-bg-color5 animated">关爱助学</div>
@@ -382,6 +374,14 @@
 					<div class="item-box animated" data-my-animate="fadeInRight">
 						<img src="images/index/6-5.jpg">
 						<div class="cont-box my-bg-color5 animated">15周年庆</div>
+					</div>
+					<div class="item-box animated" data-my-animate="fadeInRight">
+						<img src="images/index/6-3.jpg">
+						<div class="cont-box my-bg-color5 animated">家属日</div>
+					</div>
+					<div class="item-box animated" data-my-animate="fadeInLeft">
+						<img src="images/index/6-2.jpg">
+						<div class="cont-box my-bg-color5 animated">春晚</div>
 					</div>
 				</div>
 			</div>
