--- a/m/culture.html
+++ b/m/culture.html
@@ -60,12 +60,14 @@
 .section3 .title{
 	height: 35px;
     line-height: 35px;
-    margin-top: 10px;
     text-align: center;
 }
 .section3 .content{
 	position: relative;
 	margin-top: 5px;
+}
+.section3 .content1{
+	margin-top: 0;
 }
 .section3 .cont-box{
 	position: absolute;
