--- a/m/news.html
+++ b/m/news.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>重庆延锋安道拓</title>
 <!-- Stylesheets -->
-<!-- <link href="css/bootstrap.css" rel="stylesheet"> -->
+<link href="css/bootstrap.css" rel="stylesheet">
 <!--MasterSlider-->
 <link rel="stylesheet" href="css/masterslider/style/masterslider.css" />
 <link href="css/masterslider/skins/default/style.css" rel="stylesheet">
@@ -84,6 +84,7 @@
 }
 .news-list .cont2{
     margin: 5px 0;
+    text-align: center;
 }
 .news-list .cont3{
     height: 40px;
@@ -93,11 +94,14 @@
     border-bottom: 1px solid #999;
 }
 .news-list .cont3 .text{
-    width: 80%;
+    /* width: 80%; */
     display: -webkit-box;
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
     overflow: hidden;
+}
+.news-list .cont3 .time{
+    white-space: nowrap;
 }
 .news-list .cont4{
     margin: 5px 0 20px 0;
