--- a/m/product.html
+++ b/m/product.html
@@ -80,28 +80,44 @@
 	<section class="section1 slide-zy">
 		<img src="images/product/1-1.jpg" />
 		<div class="content">
-			<img class="zy-img" src="images/index/3-2.png">
+			<img class="zy-img" src="images/index/yz.gif">
 			<div class="content-box">
-				<div class="point point1">
+				<div class="point point1 animated ani-time2" data-my-animate="fadeInLeft">
+					<a href="product.html?item=2"><div class="point-text">整椅</div></a>
 					<img src="images/icons/point.png">
-					<div class="point-text">整椅</div>
+					<div class="line">
+						<span class="small-point"></span>
+						<span>></span>
+					</div>
 				</div>
-				<div class="point point2">
+				<div class="point point2 animated ani-time3" data-my-animate="fadeInLeft">
+					<a href="product.html?item=5"><div class="point-text">面套</div></a>
 					<img src="images/icons/point.png">
-					<div class="point-text">面套</div>
+					<div class="line">
+							<span class="small-point"></span>
+							<span>></span>
+						</div>
 				</div>
-				<div class="point point3">
+				<div class="point point3 animated ani-time3" data-my-animate="fadeInRight">
+					<div class="line">
+						<span><</span>
+						<span class="small-point"></span>
+					</div>
 					<img src="images/icons/point.png">
-					<div class="point-text">骨架</div>
+					<a href="product.html?item=4"><div class="point-text">骨架</div></a>
 				</div>
-				<div class="point point4">
+				<div class="point point4 animated ani-time2" data-my-animate="fadeInRight">
+					<div class="line">
+						<span><</span>
+						<span class="small-point"></span>
+					</div>
 					<img src="images/icons/point.png">
-					<div class="point-text">泡沫</div>
+					<a href="product.html?item=6"><div class="point-text">泡沫</div></a>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="section2">
+	<section class="section2" data-item="2">
 		<img src="images/product/2-1.jpg" />
 		<div class="content1 wow fadeInLeft">
 			<div class="title my-color2 my-font5">乘用车座椅</div>
@@ -110,7 +126,7 @@
 		</div>
 		<img class="content2" src="images/product/2-2.png" />
 	</section>
-	<section class="section3">
+	<section class="section3" data-item="3">
 		<img src="images/product/3-1.jpg" />
 		<div class="content1 wow fadeInLeft">
 			<div class="title my-color5 my-font5">商用车座椅</div>
@@ -118,7 +134,7 @@
 		</div>
 		<img class="content2" src="images/product/3-2.png" />
 	</section>
-	<section class="section4">
+	<section class="section4" data-item="4">
 		<img src="images/product/4-1.jpg" />
 		<div class="content wow fadeInUp100">
 			<div class="title my-color2 my-font5">骨架与零部件</div>
@@ -126,7 +142,7 @@
 				策略，提升产品轻量化，致力超越客户多样化的需求。</div>
 		</div>
 	</section>
-	<section class="section5">
+	<section class="section5" data-item="5">
 		<img src="images/product/5-1.jpg" />
 		<div class="content wow fadeInUp100">
 			<div class="title my-color2 my-font5">面套</div>
@@ -134,7 +150,7 @@
 				裁剪、缝制技术，使座椅呈现高品质的外观，为创意设计和凸显个性化提供更大的自由度。</div>
 		</div>
 	</section>
-	<section class="section6">
+	<section class="section6" data-item="6">
 		<img src="images/product/6-1.jpg" />
 		<div class="content wow fadeInUp100">
 			<div class="title my-color5 my-font5">泡沫</div>
