--- a/m/profession.html
+++ b/m/profession.html
@@ -294,7 +294,7 @@
 		<img src="images/profession/3-1.jpg" />
 		<div class="content content-box my-color1 wow fadeInLeft">
 			<div class="cont1 my-font4">
-				<a href="http://www.hotjob.cn/wt/CQYFAS/web/index/campus">
+				<a href="http://www.hotjob.cn/wt/CQYFAS/web/index/campus" target="_blank">
 					<span class="my-bg-color2 my-color1">校园招聘</span>
 				</a>
 			</div>
@@ -310,7 +310,7 @@
 		<img src="images/profession/4-1.jpg" />
 		<div class="content content-box my-color1 wow fadeInRight">
 			<div class="cont1 my-font4">
-				<a href="http://www.hotjob.cn/wt/CQYFAS/web/index/social">
+				<a href="http://www.hotjob.cn/wt/CQYFAS/web/index/social" target="_blank">
 					<span class="my-bg-color2 my-color1">社会招聘</span>
 				</a>
 			</div>
