--- a/index-en.html
+++ b/index-en.html
@@ -234,7 +234,7 @@
 					<img class="zy-img animated" data-my-animate="fadeInUp100" src="images/index/yz.gif">
 					<div class="content-box">
 						<div class="point point1 animated ani-time2" data-my-animate="fadeInLeft">
-							<div class="point-text">整椅</div>
+							<a href="product-en.html"><div class="point-text">整椅</div></a>
 							<img src="images/icons/point.png">
 							<div class="line">
 								<span class="small-point"></span>
@@ -242,7 +242,7 @@
 							</div>
 						</div>
 						<div class="point point2 animated ani-time3" data-my-animate="fadeInLeft">
-							<div class="point-text">面套</div>
+							<a href="product-en.html"><div class="point-text">面套</div></a>
 							<img src="images/icons/point.png">
 							<div class="line">
 									<span class="small-point"></span>
@@ -255,7 +255,7 @@
 								<span class="small-point"></span>
 							</div>
 							<img src="images/icons/point.png">
-							<div class="point-text">骨架</div>
+							<a href="product-en.html"><div class="point-text">骨架</div></a>
 						</div>
 						<div class="point point4 animated ani-time2" data-my-animate="fadeInRight">
 							<div class="line">
@@ -263,7 +263,7 @@
 								<span class="small-point"></span>
 							</div>
 							<img src="images/icons/point.png">
-							<div class="point-text">泡沫</div>
+							<a href="product-en.html"><div class="point-text">泡沫</div></a>
 						</div>
 					</div>
 				</div>
@@ -370,14 +370,6 @@
 						<img src="images/index/6-1.jpg">
 						<div class="cont-box my-bg-color5 animated">Run for love</div>
 					</div>
-					<div class="item-box animated" data-my-animate="fadeInLeft">
-						<img src="images/index/6-2.jpg">
-						<div class="cont-box my-bg-color5 animated">Spring Festival Gala Evening</div>
-					</div>
-					<div class="item-box animated" data-my-animate="fadeInRight">
-						<img src="images/index/6-3.jpg">
-						<div class="cont-box my-bg-color5 animated">Family day</div>
-					</div>
 					<div class="item-box animated" data-my-animate="fadeInRight">
 						<img src="images/index/6-4.jpg">
 						<div class="cont-box my-bg-color5 animated">Caring for students</div>
@@ -385,6 +377,14 @@
 					<div class="item-box animated" data-my-animate="fadeInRight">
 						<img src="images/index/6-5.jpg">
 						<div class="cont-box my-bg-color5 animated">15th anniversary</div>
+					</div>
+					<div class="item-box animated" data-my-animate="fadeInRight">
+						<img src="images/index/6-3.jpg">
+						<div class="cont-box my-bg-color5 animated">Family day</div>
+					</div>
+					<div class="item-box animated" data-my-animate="fadeInLeft">
+						<img src="images/index/6-2.jpg">
+						<div class="cont-box my-bg-color5 animated">Spring Festival Gala Evening</div>
 					</div>
 				</div>
 			</div>
