--- a/m/common/footer.html
+++ b/m/common/footer.html
@@ -32,11 +32,11 @@
 	</div>
 	<div class="logo-box">
 		<div class="logo-lable">友情链接：</div>
-		<a href="https://www.adient.com"><img src="images/logo1.png" alt="" /></a>	
-		<a href="https://www.yanfengadient.com/"><img src="images/logo2.png" alt="" /></a>	
+		<a href="https://www.adient.com" target="_blank"><img src="images/logo1.png" alt="" /></a>	
+		<a href="https://www.yanfengadient.com/" target="_blank"><img src="images/logo2.png" alt="" /></a>	
 	</div>	
 	<div class="text-box">
 		<div class="text1">© 2018 Adient plc. All Rights Reserved</div>
-		<div class="text2"><a href="http://www.miitbeian.gov.cn">渝ICP备18007434号-1</a></div>
+		<div class="text2"><a href="http://www.miitbeian.gov.cn" target="_blank">渝ICP备18007434号-1</a></div>
 	</div>
 </footer>
