--- a/m/technology.html
+++ b/m/technology.html
@@ -83,6 +83,7 @@
 	margin-bottom: 15px;
 }
 .section2 .content3 .cont-box .cont>span{
+	padding: 0 10px;
 	background-color: rgba(190, 213, 51, 0.8);
 }
 .section3 .content1{
