--- a/product.html
+++ b/product.html
@@ -153,7 +153,7 @@
 					<img class="zy-img animated" data-my-animate="fadeInUp100" src="images/index/yz.gif">
 					<div class="content-box">
 						<div class="point point1 animated ani-time2" data-my-animate="fadeInLeft">
-							<div class="point-text">整椅</div>
+							<a href="product.html?item=2"><div class="point-text">整椅</div></a>
 							<img src="images/icons/point.png">
 							<div class="line">
 								<span class="small-point"></span>
@@ -161,7 +161,7 @@
 							</div>
 						</div>
 						<div class="point point2 animated ani-time3" data-my-animate="fadeInLeft">
-							<div class="point-text">面套</div>
+							<a href="product.html?item=5"><div class="point-text">面套</div></a>
 							<img src="images/icons/point.png">
 							<div class="line">
 									<span class="small-point"></span>
@@ -174,7 +174,7 @@
 								<span class="small-point"></span>
 							</div>
 							<img src="images/icons/point.png">
-							<div class="point-text">骨架</div>
+							<a href="product.html?item=4"><div class="point-text">骨架</div></a>
 						</div>
 						<div class="point point4 animated ani-time2" data-my-animate="fadeInRight">
 							<div class="line">
@@ -182,7 +182,7 @@
 								<span class="small-point"></span>
 							</div>
 							<img src="images/icons/point.png">
-							<div class="point-text">泡沫</div>
+							<a href="product.html?item=5"><div class="point-text">泡沫</div></a>
 						</div>
 					</div>
 				</div>
