ios视频兼容性问题

--- a/m/technology.html
+++ b/m/technology.html
@@ -28,7 +28,8 @@
 <style type="text/css">
 .section1 .content1{
 	position: absolute;
-    width: 70%;
+	width: 70%;
+	left: 0;
     top: 50%;
     transform: translateY(-50%);
     -webkit-transform: translateY(-50%);
